StructuredTaskScope and enable preview deleted